# OrbWalker

./: .gitignore  CMakeLists.txt  LICENSE  OrbWalker.sln  OrbWalker.vcxproj  OrbWalker.vcxproj.filters  README.md  compile_commands.json  dllmain.cpp  function.cpp  function.ixx  object.cpp  object.ixx  offset.cpp  offset.ixx  orbwalker.cpp  pch.h  vcpkg.json  xmake.lua
.github/workflows/: msbuild.yml
ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
Imgui/: imgui.cpp
Kiero/: CMakeLists.txt  kiero.cpp  kiero.h  kiero.lib
Lib/Detours/: detours.lib
Libmem/: libmem.lib
OrbWalker/: Function.ixx  Object.ixx  Offset.cpp  Offset.ixx  OrbWalker.ixx  OrbWalker.vcxproj  OrbWalker.vcxproj.filters  defines.h  detours.h  detours.lib  dllmain.cpp  framework.h  function.cpp  function.hpp  functions.cpp  functions.h  hook.cpp  hooks.cpp  hooks.hpp  memory.cpp  memory.h  object.cpp  object.h  object.hpp  objlist.cpp  objlist.h  offset.cpp  offset.hpp  offsets.cpp  offsets.h  orbwalker.cpp  orbwalker.h  orbwalker.hpp  pch.h  pch.hpp  render.cpp  renderer.cpp  renderer.h  script.cpp  script.hpp  (+7 more)
OrbWalker/agent/: config.cpp  config.hpp  hook.cpp  hook.hpp  hooks.cpp  hooks.hpp  orb.cpp  orb.hpp  script.cpp  script.hpp  skinchanger.cpp  skinchanger.hpp  ui.cpp  ui.hpp
OrbWalker/class/: Spell.cpp  astring.hpp  buff.cpp  buff.hpp  champion.cpp  champion.hpp  chat.cpp  chat.hpp  data_stack.cpp  data_stack.hpp  datastack.cpp  function.cpp  function.hpp  hud.cpp  hud.hpp  obj_list.cpp  obj_list.hpp  object.cpp  object.hpp  objlist.cpp  property.hpp  skin.hpp  spell.hpp  spellcast.cpp  struct.hpp
OrbWalker/config/: config.cpp  config.hpp
libmem/: libmem.h
src/: CMakeLists.txt  dllmain.cpp  framework.h  functions.cpp  functions.h  memory.cpp  memory.h  object.cpp  object.h  objlist.cpp  objlist.h  orbwalker.cpp  orbwalker.h  pad.h  pch.h  pch.hpp  renderer.cpp  renderer.h  spoof_call.h  spoofer.asm
src/agent/: config.cpp  script.cpp  script.hpp  ui.hpp
src/class/: obj_list.cpp  object.hpp
src/res/: offset.hpp
src/util/: enum.hpp  fnvhash.hpp
(+38 files in other folders)
